--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -5,7 +5,7 @@
 
     <body>
         <h2>Privacy Policy</h2>
-        <p>Your privacy is important to us. It is Takohi&#39;s policy to respect your privacy and comply with any applicable law and regulation regarding any personal information we may collect about you, including across our website, <a href="https://www.takohi.com">https://www.takohi.com</a>, and other sites we own and operate. </p>
+        <p>Your privacy is important to us. It is Takohi&#39;s policy to respect your privacy and comply with any applicable law and regulation regarding any personal information we may collect about you, including across our website, <a href="https://konsomejona.github.io/">https://konsomejona.github.io/</a>, and other sites we own and operate. </p>
         <p>This policy is effective as of 24 March 2021 and was last updated on 24 March 2021. </p>
         <h3>Information We Collect</h3>
         <p>Information we collect includes both information you knowingly and actively provide us when using or participating in any of our services and promotions, and any information automatically sent by your devices in the course of accessing our products and services. </p>
