--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Three Column Portfolio Template for Bootstrap 3</title>
+    <title>Takohi - KonsomeJona (Jonathan Odul)</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -26,7 +26,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="https://github.com/KonsomeJona">Takohi - Jonathan Odul</a>
+          <a class="navbar-brand" href="https://github.com/KonsomeJona">Takohi - KonsomeJona (Jonathan Odul)</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
