--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
             <div class="apps-grid">
                 <div class="app-card">
                     <div class="app-icon">
-                        <img src="https://play-lh.googleusercontent.com/proxy/eMhJXNMXtBwQG3AJLgKQJVBsBP-2UQZxOaQoQ1Y9VJZmcJBx5wCIqJLqJfRCzpkFzv0t0bHmGjTRi9YxQKH9-CQ8AvFa5w=s180" alt="Easy Print">
+                        <div class="app-icon-placeholder" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);">
+                            <span>EP</span>
+                        </div>
                     </div>
                     <h3>Easy Print</h3>
                     <p>Simple and easy printing solution for your mobile device</p>
@@ -39,7 +41,9 @@
 
                 <div class="app-card">
                     <div class="app-icon">
-                        <img src="https://play-lh.googleusercontent.com/proxy/eMhJXNMXtBwQG3AJLgKQJVBsBP-2UQZxOaQoQ1Y9VJZmcJBx5wCIqJLqJfRCzpkFzv0t0bHmGjTRi9YxQKH9-CQ8AvFa5w=s180" alt="Mood Light">
+                        <div class="app-icon-placeholder" style="background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);">
+                            <span>ML</span>
+                        </div>
                     </div>
                     <h3>Mood Light</h3>
                     <p>Transform your device into a relaxing mood light with customizable colors</p>
