--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
             <div class="apps-grid">
                 <div class="app-card">
                     <div class="app-icon">
-                        <div class="app-icon-placeholder" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);">
-                            <span>EP</span>
-                        </div>
+                        <img src="easyprint-icon.svg" alt="Easy Print">
                     </div>
                     <h3>Easy Print</h3>
                     <p>Simple and easy printing solution for your mobile device</p>
@@ -41,9 +39,7 @@
 
                 <div class="app-card">
                     <div class="app-icon">
-                        <div class="app-icon-placeholder" style="background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);">
-                            <span>ML</span>
-                        </div>
+                        <img src="moodlight-icon.svg" alt="Mood Light">
                     </div>
                     <h3>Mood Light</h3>
                     <p>Transform your device into a relaxing mood light with customizable colors</p>
