🔥 Firebase fully configured - QR code system now LIVE!
✅ Firebase Project: weargb (480332250386)
✅ Database URL: https://weargb-default-rtdb.firebaseio.com
✅ Web App: 1:480332250386:web:bbedc88699265f019747cb
✅ Android App: 1:480332250386:android:bb0b24818b022d2f9747cb

🚀 Real Firebase configuration deployed:
- Web interface updated with actual API keys and config
- Database rules deployed for secure URL session management
- Android google-services.json generated and ready
- Database connectivity tested and working

🎯 QR Code System Status: FULLY FUNCTIONAL
- Watch generates QR → Phone scans → Web interface → Firebase → Watch receives URL
- Real-time sync between devices via Firebase Realtime Database
- Zero server maintenance, production ready!

--- a/weargb-input.html
+++ b/weargb-input.html
@@ -207,16 +207,16 @@
         import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js';
         import { getDatabase, ref, set } from 'https://www.gstatic.com/firebasejs/9.22.0/firebase-database.js';
 
-        // Firebase configuration - WearGB Project
-        // TODO: Replace with actual Firebase project configuration
+        // Firebase configuration - WearGB Project (Real Configuration)
         const firebaseConfig = {
-            apiKey: "YOUR_API_KEY", // Get from Firebase Console
+            apiKey: "AIzaSyBp8_V8jjEUq1aGuypS6VV63cFBFap0s6M",
             authDomain: "weargb.firebaseapp.com",
             databaseURL: "https://weargb-default-rtdb.firebaseio.com",
             projectId: "weargb",
-            storageBucket: "weargb.appspot.com",
-            messagingSenderId: "YOUR_SENDER_ID", // Get from Firebase Console  
-            appId: "YOUR_APP_ID" // Get from Firebase Console
+            storageBucket: "weargb.firebasestorage.app",
+            messagingSenderId: "480332250386",
+            appId: "1:480332250386:web:bbedc88699265f019747cb",
+            measurementId: "G-K7GSDPC934"
         };
 
         // Initialize Firebase
