Update Firebase configuration for IPTV Stream Watch project

--- a/iptv-input.html
+++ b/iptv-input.html
@@ -208,16 +208,15 @@
         import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js';
         import { getDatabase, ref, set } from 'https://www.gstatic.com/firebasejs/9.22.0/firebase-database.js';
 
-        // Firebase configuration - IPTV Project
+        // Firebase configuration - IPTV Stream Watch Project
         const firebaseConfig = {
-            apiKey: "AIzaSyBp8_V8jjEUq1aGuypS6VV63cFBFap0s6M",
-            authDomain: "weargb.firebaseapp.com",
-            databaseURL: "https://iptv-qr-default-rtdb.firebaseio.com",
-            projectId: "iptv-qr",
-            storageBucket: "iptv-qr.firebasestorage.app",
-            messagingSenderId: "480332250386",
-            appId: "1:480332250386:web:bbedc88699265f019747cb",
-            measurementId: "G-K7GSDPC934"
+            apiKey: "AIzaSyACXiOIu6msDr_5gldSkXmV6O7p-yggvWk",
+            authDomain: "iptv-stream-watch.firebaseapp.com",
+            databaseURL: "https://iptv-stream-watch-default-rtdb.firebaseio.com",
+            projectId: "iptv-stream-watch",
+            storageBucket: "iptv-stream-watch.firebasestorage.app",
+            messagingSenderId: "132424577531",
+            appId: "1:132424577531:android:cdb1444d203bc2f12edb5e"
         };
 
         // Initialize Firebase
