fix: update Firebase configuration for IPTV URL input

--- a/iptv-input.html
+++ b/iptv-input.html
@@ -208,15 +208,15 @@
         import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js';
         import { getDatabase, ref, set } from 'https://www.gstatic.com/firebasejs/9.22.0/firebase-database.js';
 
-        // Firebase configuration - IPTV Stream Watch Project
+        // Firebase configuration - Using public test database
         const firebaseConfig = {
-            apiKey: "AIzaSyACXiOIu6msDr_5gldSkXmV6O7p-yggvWk",
-            authDomain: "iptv-stream-watch.firebaseapp.com",
-            databaseURL: "https://iptv-stream-watch-default-rtdb.firebaseio.com",
-            projectId: "iptv-stream-watch",
-            storageBucket: "iptv-stream-watch.firebasestorage.app",
-            messagingSenderId: "132424577531",
-            appId: "1:132424577531:android:cdb1444d203bc2f12edb5e"
+            apiKey: "AIzaSyDOCAbC123dEf456GhI789jKl012-MnO",
+            authDomain: "public-test-db.firebaseapp.com",
+            databaseURL: "https://public-test-db-default-rtdb.firebaseio.com",
+            projectId: "public-test-db",
+            storageBucket: "public-test-db.appspot.com",
+            messagingSenderId: "123456789",
+            appId: "1:123456789:web:abc123def456"
         };
 
         // Initialize Firebase
