Update main page with StreamWatch IPTV release and updated stats

--- a/weargb-input.html
+++ b/weargb-input.html
@@ -180,7 +180,7 @@
             <input 
                 type="url" 
                 id="urlInput" 
-                placeholder="https://example.com/pokemon-yellow.gbc"
+                placeholder="https://example.com/game.gb"
                 autocomplete="url"
                 spellcheck="false"
             >
