--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             <h1>Professional Android Applications</h1>
             <p class="developer-link">
                 View all apps on <a href="https://play.google.com/store/apps/developer?id=%E8%9B%B8%E7%81%AB" target="_blank">Google Play Store</a>
-                <a href="https://github.com/KonsomeJona/mono" target="_blank" class="mono-repo-link">
+                <a href="https://github.com/KonsomeJona/mono-google-play-apps" target="_blank" class="mono-repo-link">
                     📁 View Source Code (Mono Repo)
                 </a>
             </p>
@@ -200,7 +200,7 @@
             <div class="developer-stats">
                 <h3>Development Portfolio Stats</h3>
                 <div class="stat-item">
-                    <span class="stat-number">7</span>
+                    <span class="stat-number">8</span>
                     <span>Published Apps</span>
                 </div>
                 <div class="stat-item">
@@ -330,26 +330,29 @@
                     </a>
                 </div>
 
-                <!-- IPTV -->
+                <!-- StreamWatch IPTV -->
                 <div class="app-card">
                     <div class="app-icon">
-                        <img src="iptv-icon.png" alt="IPTV">
+                        <img src="iptv-icon.png" alt="StreamWatch IPTV">
                     </div>
                     <div class="platform-badge wearos">WearOS</div>
                     <div class="platform-badge mobile">Mobile</div>
                     <div class="platform-badge utility">Android TV</div>
-                    <h3>IPTV</h3>
+                    <h3>StreamWatch IPTV</h3>
                     <p><strong>Multi-Platform IPTV Streaming</strong></p>
-                    <p>Cross-platform IPTV streaming app with synchronization between WearOS, Mobile, and Android TV devices. Features favorites sync and voice input.</p>
-                    <p><em>Package: me.takohi.iptv (WearOS) / me.takohi.iptv.mobile (Mobile) / me.takohi.iptv.tv (TV)</em></p>
+                    <p>Professional IPTV streaming app with QR code input, Firebase sync, and cross-device support for WearOS, Mobile, and Android TV.</p>
+                    <p><em>Package: me.takohi.iptv</em></p>
                     <ul style="text-align: left; display: inline-block;">
-                        <li>M3U/M3U8 playlist support</li>
-                        <li>Cross-device synchronization</li>
-                        <li>Voice input for URLs</li>
-                        <li>Smart favorites management</li>
-                        <li>In-app support button (Buy Me a Coffee)</li>
+                        <li>M3U/M3U8 playlist support with smart parsing</li>
+                        <li>QR code URL input via web interface</li>
+                        <li>Firebase real-time synchronization</li>
+                        <li>Favorites management across devices</li>
+                        <li>Voice input support for URLs</li>
+                        <li>ExoPlayer with adaptive streaming</li>
                     </ul>
-                    <p><em>Coming Soon to Google Play</em></p>
+                    <a href="https://play.google.com/store/apps/details?id=me.takohi.iptv" class="play-button" target="_blank">
+                        View on Google Play
+                    </a>
                 </div>
 
                 <!-- WearGB -->
