--- a/weargb-input.html
+++ b/weargb-input.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', system-ui, sans-serif;
-            max-width: 500px;
+            max-width: 600px;
             margin: 0 auto;
             padding: 20px;
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
@@ -130,32 +130,42 @@
             font-size: 12px;
             opacity: 0.7;
             display: flex;
-            gap: 30px;
+            gap: 20px;
             justify-content: space-between;
+            flex-wrap: nowrap;
         }
 
         .examples-column {
             flex: 1;
+            min-width: 0;
         }
 
         .examples h3 {
             margin: 0 0 10px 0;
             font-size: 14px;
+            font-weight: 600;
+            opacity: 1;
         }
 
         .examples ul {
             margin: 0;
             padding-left: 20px;
+            list-style-type: disc;
         }
 
         .examples li {
             margin-bottom: 4px;
+            line-height: 1.4;
         }
 
-        @media (max-width: 600px) {
+        @media (max-width: 480px) {
             .examples {
                 flex-direction: column;
                 gap: 15px;
+            }
+
+            .examples-column {
+                width: 100%;
             }
         }
         
