Update IPTV input page with legal notice for responsible content access

--- a/iptv-input.html
+++ b/iptv-input.html
@@ -200,6 +200,10 @@
                 <li>Direct streaming URLs</li>
                 <li>Panel API endpoints</li>
             </ul>
+
+            <div style="margin-top: 20px; padding: 15px; background: rgba(255, 193, 7, 0.1); border: 1px solid rgba(255, 193, 7, 0.3); border-radius: 8px; font-size: 11px;">
+                <strong>⚖️ Legal Notice:</strong> This tool is designed for accessing legally owned IPTV content. Users are responsible for ensuring they have proper authorization to access any streaming content. Do not use this tool for accessing copyrighted material without permission.
+            </div>
         </div>
     </div>
 
